<resources>
    <string name="app_name">Kid Currencies</string>
    <string name="usernameInputMain">Enter Username/Email</string>
    <string name="passwordInputMain">Enter Password</string>
    <string name="loginButton">Login</string>
    <string name="recoverUsernamePassword">Forgot your username or password</string>
    <string name="createAccount">Create an Account</string>
    <string name="createDisplayName">Display Name</string>
    <string name="createUsername">Username</string>
    <string name="createEmail">Email</string>
    <string name="createPasswordInitial">Enter Password</string>
    <string name="createPasswordReEnter">Re-Enter Password</string>
    <string name="submitNewReserveAccount">Submit</string>
    <string name="entityTextView">Children</string>
    <string name="taskTextView">Tasks</string>
    <string name="rewardTextView">Rewards</string>
    <string name="fineTextView">Fines</string>
    <string name="reserveHomeLblTitle">Account Home</string>

    <!-- Generic Button Text -->
    <string name="SAVE"> Save </string>
    <string name="CANCEL"> Cancel </string>
    <string name="DONE"> Done </string>
    <string name="PREVIOUS">Previous</string>
    <string name="NEXT">Next</string>
    <string name="EDIT">Edit</string>
    <string name="PLUS">+</string>
    <string name="ADDNEW">Add New</string>
    <string name="VIEWALL">View All</string>

    <!-- Edit/Add Currency Strings -->
    <string name="editCurrencyTitle"> Add/Edit Account Currency</string>
    <string name="editCurrencyLblName">Currency Name:</string>
    <string name="editCurrencyNameHint">Enter Currency Name</string>
    <string name="editCurrencyLblSymbol">Select Currency Symbol:</string>

    <!-- Array for Edit/Add Currency Strings -->
    <string-array name="currencySymbol_Array">
        <item>$</item>
        <item>¤</item>
        <item>¢</item>
        <item>£</item>
        <item>€</item>
        <item>¥</item>
        <item>"\u20BF"</item>
        <item>"\u20BD"</item>
        <item>"\u20AD"</item>
        <item>"\u20A3"</item>
        <item>"\u20A6"</item>
        <item>"\u20BA"</item>
        <item>"\u20B3"</item>
    </string-array>

    <!-- Edit/Add Entity -->
    <string name="title_activity_edit_add_entity">EditAddEntity</string>
    <string name="editEntityTitle"> Add/Edit Child</string>
    <string name="editEntityLblName">Name:</string>
    <string name="editEntityNameHint">Enter Child\'s Name</string>
    <string name="editEntityLblBirthday">Birth Date:</string>
    <string name="editEntityBirthdayHint">Enter Birth Date</string>
    <string name="editEntityLblEmail">Email Address:</string>
    <string name="editEntityEmailHint">Optional</string>
    <string name="editEntityLblTransactions">Assigned Tasks/Rewards/Fines</string>

    <!-- Edit/Add Transactions -->
    <string name="editTransactionTitle">Add/Edit Task</string>
    <string name="editTransactionLblName">Task Name:</string>
    <string name="editTransactionLblValue">Task Value:</string>
    <string name="editTransactionLblExpires">Expiration:</string>
    <string name="editTransactionLblDescription">Description:</string>
    <string name="editTransactionLblAssigned">Assigned to:</string>

    <!-- Arrays of Edit/Add Transactions -->
    <string-array name="editTransactionSpinRepeat">
        <item>Repeatable</item>
        <item>Not-Repeatable</item>
    </string-array>
    <string-array name="editTransactionSpinCoolDown">
        <item>Immediately</item>
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>

    <!-- Reserve Home -->
    <string name="reserveHomePage">Reserve Home</string>
    <string name="addEditSpinner">Add/Edit</string>
    <string name="testEntityListButton">Test Entity</string>
    <string name="testTaskButton">Test Task</string>
    <string name="testRewardButton">Test Reward</string>

    <!-- Display List -->
    <string name="displayListLblSort">Sort By:</string>

    <!-- Display Details -->
    <string name="displayDetailsTitle">Display Details</string>
    <string name="displayDetailsLblName">Name:</string>
    <string name="displayDetailsLblValue">Value:</string>
    <string name="displayDetailsLblExpires">Expiration:</string>
    <string name="displayDetailsLblDescription">Description:</string>
    <string name="displayDetailsLblAssigned">Assigned to:</string>
    <string name="displayDetailsTextCoolDown">Cool Down</string>
    <string name="displayDetailsTextExpires">Date of Expiration</string>
    <string name="displayDetailsTextRepeat">Repeat</string>

    <!-- DisplayHistory -->
    <string name="displayHistoryLblTitle">History</string>

    <!-- Arrays of Details -->
    <string-array name="displayDetailsSpinRepeat">
        <item>Repeatable</item>
        <item>Not-Repeatable</item>
    </string-array>
    <string-array name="displayDetailsSpinCoolDown">
        <item>Immediately</item>
        <item>Hourly</item>
        <item>Daily</item>
        <item>Weekly</item>
    </string-array>

</resources>
